; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_remote.c_get_optional_config.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_remote.c_get_optional_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32*, i8*)* @get_optional_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_optional_config(i32* %0, i32* %1, i32* %2, i32* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i8* %4, i8** %11, align 8
  store i32 0, i32* %12, align 4
  %14 = load i32*, i32** %9, align 8
  %15 = call i8* @git_buf_cstr(i32* %14)
  store i8* %15, i8** %13, align 8
  %16 = load i32*, i32** %9, align 8
  %17 = call i64 @git_buf_oom(i32* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %5
  store i32 -1, i32* %6, align 4
  br label %51

20:                                               ; preds = %5
  %21 = load i32*, i32** %10, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %23, label %29

23:                                               ; preds = %20
  %24 = load i32*, i32** %8, align 8
  %25 = load i8*, i8** %13, align 8
  %26 = load i32*, i32** %10, align 8
  %27 = load i8*, i8** %11, align 8
  %28 = call i32 @git_config_get_multivar_foreach(i32* %24, i8* %25, i32* null, i32* %26, i8* %27)
  store i32 %28, i32* %12, align 4
  br label %34

29:                                               ; preds = %20
  %30 = load i8*, i8** %11, align 8
  %31 = load i32*, i32** %8, align 8
  %32 = load i8*, i8** %13, align 8
  %33 = call i32 @git_config_get_string(i8* %30, i32* %31, i8* %32)
  store i32 %33, i32* %12, align 4
  br label %34

34:                                               ; preds = %29, %23
  %35 = load i32*, i32** %7, align 8
  %36 = icmp ne i32* %35, null
  br i1 %36, label %37, label %43

37:                                               ; preds = %34
  %38 = load i32, i32* %12, align 4
  %39 = icmp ne i32 %38, 0
  %40 = xor i1 %39, true
  %41 = zext i1 %40 to i32
  %42 = load i32*, i32** %7, align 8
  store i32 %41, i32* %42, align 4
  br label %43

43:                                               ; preds = %37, %34
  %44 = load i32, i32* %12, align 4
  %45 = load i32, i32* @GIT_ENOTFOUND, align 4
  %46 = icmp eq i32 %44, %45
  br i1 %46, label %47, label %49

47:                                               ; preds = %43
  %48 = call i32 (...) @git_error_clear()
  store i32 0, i32* %12, align 4
  br label %49

49:                                               ; preds = %47, %43
  %50 = load i32, i32* %12, align 4
  store i32 %50, i32* %6, align 4
  br label %51

51:                                               ; preds = %49, %19
  %52 = load i32, i32* %6, align 4
  ret i32 %52
}

declare dso_local i8* @git_buf_cstr(i32*) #1

declare dso_local i64 @git_buf_oom(i32*) #1

declare dso_local i32 @git_config_get_multivar_foreach(i32*, i8*, i32*, i32*, i8*) #1

declare dso_local i32 @git_config_get_string(i8*, i32*, i8*) #1

declare dso_local i32 @git_error_clear(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
